# ejabberd_harbor

./: .gitignore  Makefile.am  Makefile.in  acinclude.m4  configure.ac
src/: auth_harbor_test.erl  ejabberd_auth_harbor.erl  harbor_odbc_queries.erl  mod_shared_roster_harbor.erl
src/mod_muc/: mod_muc_harbor.erl  mod_muc_room_harbor.erl
src/mod_muc_harbor/: Makefile.in  mod_muc_harbor.erl  mod_muc_log_harbor.erl  mod_muc_room_harbor.erl  pg.sql
